Update About page

--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -22,11 +22,11 @@
                         <br><br>
                         I start leaning Python and specialised in to Django.
                         <br>
-                        Most of my projects are hosted on Heroku and use PostgreSQL, Amazon S3 AWS, Celery, RabbitMQ, Selenium, BeautifulSoup4, NumPy, Pandas, HTML, CSS, git, Bootstrap.
+                        Most of my projects are hosted on Heroku and use PostgreSQL, Amazon S3 AWS, Celery, RabbitMQ, HTML, CSS.
                         <br><br>
-                        I just finished freecodecamp.org, frontend part, where I built over 30 projects with JavaScript, React.js, Node.js and I am planning to make my next projects with Django as backend and React.js as frontend.
+                        During freecodecamp.org course I built over 30 projects with JavaScript, React.js, Node.js.
                         <br><br>
-                        I am building my experience hoping that one day I will be able to start a career in web development.
+                        This interesting journey helped me to land a job as a software developer where I am building APIs with Java Spring Boot.
                 </div>
             </div>
 
@@ -36,7 +36,6 @@
                      style="border-radius: 5px"
                      width="75%"
                      alt="Portrait">
-
 
                 <div class="m-1">
                     <a href="https://www.linkedin.com/in/gabriel-ionescu/" target="_blank">
