Update personal info

--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -12,21 +12,16 @@
             <div class="col-sm-6">
 
                 <div class="row align-items-center h-100 m-1">
-                    <h5 class="card-title" style="color: #434343">
-                        <strong>
-                            Time flies when you’re having fun!
-                        </strong>
-                    </h5>
                     <p class="card-text text-justify">
-                        After a long period of just repairing computers and helping others I decided to help myself as well.
+                        Python / Flask / Django developer.
                         <br><br>
-                        I start leaning Python and specialised in to Django.
+                        Currently working in a project team of backend developers, testers, UR, UX, and BAs.
                         <br>
-                        Most of my projects are hosted on Heroku and use PostgreSQL, Amazon S3 AWS, Celery, RabbitMQ, HTML, CSS.
-                        <br><br>
-                        During freecodecamp.org course I built over 30 projects with JavaScript, React.js, Node.js.
-                        <br><br>
-                        This interesting journey helped me to land a job as a software developer where I am building APIs with Java Spring Boot.
+                        I am responsible for maintaining and adding new features to a
+                        GDS-compliant Python/Flask/WTForms/JS application interacting with external microservice APIs
+                        as an internal casework system replacement as well as creating and updating acceptance tests
+                        in Ruby/Capybara.
+                    </p>
                 </div>
             </div>
 
