--- a/src/templates/projects/home.html
+++ b/src/templates/projects/home.html
@@ -14,7 +14,7 @@
     <div class="row align-items-center text-center h-100">
         <div class="col-md-8 mx-auto">
             <h1 id="main-first">gabriel ionescu</h1>
-            <h2 id="main-second">web developer</h2>
+            <h2 id="main-second">python developer</h2>
             <br><br>
             <hr>
 
